// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests > react/MultiSelect > Basic 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-label="label"
      data-testid="SelectGroup"
      style="display: grid; grid-template-columns: 1fr; gap: 8px;"
    >
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          checked=""
          class="charcoal-multi-select-input"
          data-overlay="false"
          name="name"
          type="checkbox"
          value="選択肢1"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢1
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name="name"
          type="checkbox"
          value="選択肢2"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢2
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          checked=""
          class="charcoal-multi-select-input"
          data-overlay="false"
          name="name"
          type="checkbox"
          value="選択肢3"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢3
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name="name"
          type="checkbox"
          value="選択肢4"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢4
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/MultiSelect > Invalid 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-label="label"
      data-testid="SelectGroup"
      style="display: grid; grid-template-columns: 1fr; gap: 8px;"
    >
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="true"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name="name"
          type="checkbox"
          value="選択肢1"
        />
        <div
          aria-hidden="true"
          aria-invalid="true"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢1
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="true"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name="name"
          type="checkbox"
          value="選択肢2"
        />
        <div
          aria-hidden="true"
          aria-invalid="true"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢2
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="true"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name="name"
          type="checkbox"
          value="選択肢3"
        />
        <div
          aria-hidden="true"
          aria-invalid="true"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢3
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="true"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name="name"
          type="checkbox"
          value="選択肢4"
        />
        <div
          aria-hidden="true"
          aria-invalid="true"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢4
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/MultiSelect > Overlay 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-label="label"
      data-testid="SelectGroup"
      style="display: grid; grid-template-columns: 1fr; gap: 8px;"
    >
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="true"
          name="name"
          type="checkbox"
          value="選択肢1"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="true"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢1
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="true"
          name="name"
          type="checkbox"
          value="選択肢2"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="true"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢2
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="true"
          name="name"
          type="checkbox"
          value="選択肢3"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="true"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢3
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="true"
          name="name"
          type="checkbox"
          value="選択肢4"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="true"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢4
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests > react/MultiSelect > Playground 1`] = `
<div>
  <div
    data-dark="false"
  >
    <div
      aria-label=""
      data-testid="SelectGroup"
      style="display: grid; grid-template-columns: 1fr; gap: 8px;"
    >
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name=""
          type="checkbox"
          value="選択肢1"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢
          1
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name=""
          type="checkbox"
          value="選択肢2"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢
          2
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name=""
          type="checkbox"
          value="選択肢3"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢
          3
        </div>
      </label>
      <label
        aria-disabled="false"
        class="charcoal-multi-select"
      >
        <input
          aria-invalid="false"
          class="charcoal-multi-select-input"
          data-overlay="false"
          name=""
          type="checkbox"
          value="選択肢4"
        />
        <div
          aria-hidden="true"
          aria-invalid="false"
          class="charcoal-multi-select-overlay"
          data-overlay="false"
        >
          <pixiv-icon
            name="24/Check"
            unsafe-non-guideline-scale="0.6666666666666666"
          />
        </div>
        <div
          class="charcoal-multi-select-label"
        >
          選択肢
          4
        </div>
      </label>
    </div>
  </div>
</div>
`;
